--- a/MapBox/app/src/main/res/values/strings.xml
+++ b/MapBox/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="access_token" translatable="false">pk.eyJ1Ijoic2hlcnJ5anljIiwiYSI6ImNqb2pteTAzdjA2YmszdXBqanZ2YmNlM2wifQ.2_9XWJxI8fDvh4d_hLlrWA</string>
     <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
+    <string name="language_switch_options_menu_language_french">French</string>
+    <string name="language_switch_options_menu_language_Chinese">Chinese</string>
+    <string name="language_switch_options_menu_language_english">English</string>
+    <string name="language_switch_options_menu_language_japanese">Japanese</string>
+    <string name="language_switch_options_menu_language_german">German</string>
 </resources>
